# calclum

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: calclum.h  codeccontext.h  container.h  ffmpeg.h  formatcontext.h  frame.h  helper.h  packet.h  video.h
src/: calclum.cpp  codeccontext.cpp  formatcontext.cpp  frame.cpp  packet.cpp  video.cpp
